<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/main_padding_16dp"
    android:orientation="vertical"
    tools:context="com.victorsaico.gastosapp.Activities.MainActivity">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txtprincipal"
        android:text="@string/main_contabilidad_de_ingresos_egresos"
        android:textSize="@dimen/main_titulo_20sp"
        android:textColor="@color/primary_text"/>
    <LinearLayout
        android:orientation="vertical"
        android:id="@+id/lineartextos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtprincipal"
        android:layout_alignParentStart="true">
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/main_margintop"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/textView"
                android:textColor="@color/secondary_text"
                android:layout_below="@+id/txtprincipal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Saldo Actual Ahorro" />

            <TextView
                android:layout_width="@dimen/layoutwidth_main_txtview"
                android:text="@string/simbologiasoles_main_s"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:layout_below="@+id/textView"

                />
            <TextView
                android:text="100"
                android:id="@+id/saldoAhorro"
                android:textColor="@color/secondary_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"/>
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/main_margintop"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/secondary_text"
                android:id="@+id/textView2"
                android:layout_below="@+id/txtprincipal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Saldo Actual Credito" />
            <TextView
                android:layout_width="@dimen/layoutwidth_main_txtview"
                android:text="@string/simbologiasoles_main_s"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:layout_below="@+id/textView"
                />

            <TextView
                android:id="@+id/saldoCredito"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_weight="1"
                android:text="100"
                android:textColor="@color/primary_text" />
        </LinearLayout>
        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/main_margintop"
            android:layout_height="wrap_content">
            <TextView
                android:textColor="@color/secondary_text"
                android:id="@+id/textView3"
                android:layout_below="@+id/txtprincipal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:text="Saldo Actual Efectivo" />
            <TextView
                android:layout_width="@dimen/layoutwidth_main_txtview"
                android:text="@string/simbologiasoles_main_s"
                android:layout_height="wrap_content"
                android:textColor="@color/primary_text"
                android:layout_below="@+id/textView"
                />

            <TextView
                android:id="@+id/saldoEfectivo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView"
                android:layout_weight="1"
                android:text="100"
                android:textColor="@color/primary_text" />
        </LinearLayout>

        <TextView
            android:layout_marginTop="@dimen/main_margintop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/txtsecondary"
            android:text="@string/main_proporcion_ingresos_egresos"
            android:textSize="@dimen/main_titulo_20sp"
            android:textColor="@color/primary_text"/>
        <ProgressBar
            android:layout_marginTop="@dimen/main_margintop"
            android:id="@+id/progressaproporcion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Base.Widget.AppCompat.ProgressBar.Horizontal"/>

    </LinearLayout>



    <android.support.design.widget.FloatingActionButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_add"
        android:id="@+id/addItem"
        android:onClick="addItem"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"/>

    <com.github.mikephil.charting.charts.PieChart
        android:layout_width="match_parent"
        android:id="@+id/PieChart"
        android:layout_below="@+id/lineartextos"
        android:layout_above="@+id/addItem"
        android:layout_height="wrap_content">
    </com.github.mikephil.charting.charts.PieChart>
</RelativeLayout>
